--- a/foryou.html
+++ b/foryou.html
@@ -114,7 +114,7 @@
   <body>
     <div class="heart" id="heart"></div>
     <div class="hint">💌 Click the heart to reveal the message 💌</div>
-    <h1 id="title">For You, My Love ❤️</h1>
+    <h1 id="title">For You, My Baby ❤️</h1>
     <p class="message" id="message">
       Even though miles lie between us, my heart has never been closer to anyone
       than it is to you. Every sunrise reminds me that you’re watching the same
